tests/valid/reborrow/reborrow_mut.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let mut r = (&mut x) in
    let mut r2 = (&mut *r) in
    let _: unrestricted () = (*r2 = 42) in
    ()
}
